# HivisionIDPhotos-ComfyUI

./: .gitignore  README.md  __init__.py  demo_workflow.json  pyproject.toml  requirements.txt
doc/: id_photo_workflow.json  idphoto_workflow.json  证件照_workflow.json
hivision/creator/: human_matting.py
hivision/demo/assets/: color_list_EN.csv
hivision/plugin/beauty/: base_adjust.py  grind_skin.py  whitening.py
